infra/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
spec:
  ingressClassName: nginx
  rules:
    - host: dev.localhost
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: myapp
                port:
                  number: 3000
